# TCM-Classics-Bench

./: .gitignore  DATA_LICENSE.md  LICENSE  PROTOCOL.md  README.md  pyproject.toml  requirements.txt
data/: STATS.json  catalog.jsonl  simple_sample.jsonl
data/bench/: pilot1_classics.jsonl  pilot2_zhongjing.jsonl  pilot3_materia_formulae.jsonl
data/bench_ner/: pilot2_zhongjing.jsonl
data/corpus/: pilot1_classics.jsonl  pilot2_zhongjing.jsonl  pilot3_materia_formulae.jsonl
notebooks/: TCM_Classics_Bench.ipynb  TCM_Classics_Bench_Eval.ipynb
schemas/: bench_item.schema.json  corpus_record.schema.json
scripts/: build_release.py  download_corpus.sh
tcm_bench/: __init__.py  cli.py  concurrency.py  evaluate.py  generate.py  ingest.py  llm.py  markup.py  parsing.py  prompts.py  schema.py  taxonomy.py  validate.py
tests/: test_pipeline.py
