[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tcm-classics-bench"
version = "0.1.0"
description = "Source-grounded benchmark builder for classical Chinese-medicine texts (Jicheng-TCM)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
opencc = ["opencc>=1.1"]
extract = ["py7zr>=0.21"]
dev = ["pytest>=7.0"]
# LLM providers
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]      # covers azure + poe (OpenAI-compatible)
litellm = ["litellm>=1.40"]
llm = ["anthropic>=0.40", "openai>=1.40", "litellm>=1.40"]

[project.scripts]
tcm-bench = "tcm_bench.cli:main"

[tool.setuptools.packages.find]
include = ["tcm_bench*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
